@@ -8,13 +8,11 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 # Version 2.0.
 # SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
 
-scenarios(simulator => 1);
+scenarios(linter => 1);
 
 compile(
-    );
-
-execute(
-    check_finished => 1,
+    fails => 1,
+    expect_filename => $Self->{golden_filename},
     );
 
 ok(1);
