@@ -7,6 +7,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ***   Support $random and $urandom seeds.
 
+***   Support 'super'.
+
 ***   Support 'with item.index'.
 
 ***   Check for proper 'local' and 'protected' (#2228).
